# b2_hackaton

./: .gitignore  README.md  databricks-access-instructions.md  execution_plan.md  instructions.md  mcp-databricks-codex.md  setup-codex.md
.github/: pull_request_template.md
ai_project1/: dbt_project.yml  main.py  profiles.yml  (+1 more)
ai_project_codex/: .gitignore  .user.yml  dbt_project.yml  profiles.yml  pyproject.toml  train_wine_model.py  visualize_wine_model.py
ai_project_codex/.githooks/: pre-push
ai_project_codex/.github/workflows/: dbt-ci.yml
ai_project_codex/docs/: agent_workflow.md  ai_agent_ci_cd.md  customer360_project_assessment.md  profiling_findings.md
ai_project_codex/macros/: generate_schema_name.sql
ai_project_codex/models/marts/: _marts.yml  _marts__models.yml  dim_customer.sql  dim_date.sql  dim_product.sql  fct_sales.sql  fct_telco_churn.sql  fct_telco_customer_churn.sql  fct_wine_quality.sql
ai_project_codex/models/sources/: _sources.yml
ai_project_codex/models/staging/: _staging.yml  _stg__models.yml  stg_b2__sales_orders.sql  stg_b2__wine_quality.sql  stg_b2_stg__customers.sql  stg_b2_stg__sales.sql  stg_b2_stg__sales_orders.sql  stg_b2_stg__telco_customer_churn.sql  stg_b2_stg__telco_customer_churn_missing.sql  stg_b2_stg__telco_customer_churn_noisy.sql  stg_b2_stg__wine_quality_analysis.sql
ai_project_codex/prompts/: README.md  docs-writer.md  full-change-workflow.md  model-author.md  reviewer.md  source-onboarding.md  test-agent.md
ai_project_codex/scripts/: ai_pre_push_guard.ps1  dbt_ci_validate.ps1  install_pre_push_hook.ps1
(+17 files in other folders)
